build update for CI
Signed-off-by: Kelly Greco <kelly@swirldslabs.com>